# DAN

./: README.md  eval_dan.py  eval_dan2.py  eval_dan3.py  eval_dan4.py  eval_dan5.py  eval_dan5_stage1.py  eval_dan6.py  eval_dan7.py  eval_dan_deform.py  eval_dan_density3.py  eval_dan_density3_v2.py  eval_dan_density3_v3.py  eval_dan_sfd.py  eval_pb.py  eval_sfd.py  train_dan.py  train_dan2.py  train_dan3.py  train_dan4.py  train_dan5.py  train_dan6.py  train_dan7.py  train_dan_deform.py  train_pb.py  train_sfd.py
cpp/Deform/: CMakeLists.txt  deform_conv.cc  deform_conv.cu  deform_conv_util.h  deform_psroi_pooling_op.cc  deform_psroi_pooling_op_gpu.cu  deform_psroi_pooling_op_gpu.h  test_deform_conv.py
cpp/ExtraLib/: CMakeLists.txt  common.cc  common.h  dynamic_anchor_routing.cc  dynamic_anchor_routing.h  small_mining_match.cc  small_mining_match.cu  small_mining_match.h  test_op.py
dataset/: convert_tfrecords.py  dataset_common.py  dataset_inspect.py
net/: danet.py  danet_deform.py  danet_v1.py  danet_v2_512.py  danet_v3_deform.py  pb_net.py  resnet_danet.py  sfd_net.py
preprocessing/: dan_preprocessing.py  dan_preprocessing_unittest.py  pb_preprocessing.py  sfd_preprocessing.py
utility/: anchor_manipulator.py  anchor_manipulator_unittest.py  custom_op.py  draw_toolbox.py  scaffolds.py
